[gd_scene load_steps=12 format=3 uid="uid://o387qlahldf"]

[ext_resource type="Script" uid="uid://cf2hav4yib2ko" path="res://Scripts/UI/stats_display.gd" id="1_trjae"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y6ig4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hefly"]
bg_color = Color(0.23921569, 0.23137255, 0.32156864, 1)
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vap2t"]
bg_color = Color(0.27450982, 0.25882354, 0.42352942, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikbf8"]
bg_color = Color(0.37084645, 0.35262692, 0.5537238, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fm0b5"]
bg_color = Color(0.23921569, 0.23137255, 0.32156864, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_si0ms"]
bg_color = Color(0.23921569, 0.23137255, 0.32156864, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bv653"]
bg_color = Color(0.4627451, 0.25882354, 0.5411765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ckhmj"]
bg_color = Color(0.23921569, 0.23137255, 0.32156864, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_trjae"]

[sub_resource type="LabelSettings" id="LabelSettings_fm0b5"]
line_spacing = 1.0
font_color = Color(0.37254903, 0.8039216, 0.89411765, 1)

[node name="StatsDisplay" type="PanelContainer"]
offset_right = 358.0
offset_bottom = 407.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_y6ig4")
script = ExtResource("1_trjae")
scroll_stylebox = SubResource("StyleBoxFlat_hefly")
scroll_grabber_stylebox = SubResource("StyleBoxFlat_vap2t")
scroll_grabber_hover_stylebox = SubResource("StyleBoxFlat_ikbf8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
theme_override_constants/separation = 0

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.27450982, 0.25882354, 0.42352942, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_fm0b5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_si0ms")
theme_override_styles/hover = SubResource("StyleBoxFlat_bv653")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ckhmj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_trjae")
text = "Default"
text_overrun_behavior = 1

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.27450982, 0.25882354, 0.42352942, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_fm0b5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_si0ms")
theme_override_styles/hover = SubResource("StyleBoxFlat_bv653")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ckhmj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_trjae")
text = "Alphabetical"
text_overrun_behavior = 1

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.27450982, 0.25882354, 0.42352942, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_fm0b5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_si0ms")
theme_override_styles/hover = SubResource("StyleBoxFlat_bv653")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ckhmj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_trjae")
text = "Hide Unchanged"
text_overrun_behavior = 1

[node name="Button4" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.27450982, 0.25882354, 0.42352942, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_fm0b5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_si0ms")
theme_override_styles/hover = SubResource("StyleBoxFlat_bv653")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ckhmj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_trjae")
text = "Random"
text_overrun_behavior = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Offset" type="Control" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
mouse_filter = 1

[node name="VerticalScroll" type="ScrollContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/VerticalScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="labelparent" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
theme_override_constants/separation = 0

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Stats"
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1
clip_text = true

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1

[node name="Line2D" type="Line2D" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent/Control"]
position = Vector2(12, 3.0000005)
points = PackedVector2Array(-12, -2, 60, -2)
width = 2.0
default_color = Color(0.37254903, 0.8039216, 0.89411765, 1)

[node name="damage" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Damage: "
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="range" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Range: "
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="weight" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Weight"
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="attackspeed" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "AttackSpeed:"
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="velocity" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Velocity"
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="count" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Count: "
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="piercing" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Piercing:"
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="duration" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Duration:"
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="buildup" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Buildup:"
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="size" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Size: "
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="hp" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Heath: "
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="stance" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Stance: "
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="movespeed" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Movespeed:"
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="xp" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "XpGain:"
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="mogul" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Mogul: "
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="luck" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Luck: "
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="critchance" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "CritChance:"
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="critdamage" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "CritDamage:"
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="ghostly" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Ghostly: "
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="regen" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Regen: "
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="magnetize" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Magnetize: "
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="lifesteal" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Lifesteal: "
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="bonusvselites" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "EliteDmg:"
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="shield" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Shield: "
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="difficulty" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Difficulty:"
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="revies" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Revives: "
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="thorns" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Thorns:"
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="inaccuracy" type="Label" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/labelparent"]
custom_minimum_size = Vector2(55, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Inaccuracy:"
label_settings = SubResource("LabelSettings_fm0b5")
vertical_alignment = 1

[node name="scroll" type="ScrollContainer" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
vertical_scroll_mode = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="listparent" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/scroll/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="Offset" type="Control" parent="VBoxContainer/HBoxContainer2/VerticalScroll/HBoxContainer/scroll/HBoxContainer2"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
mouse_filter = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="button1"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="button2"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button3" to="." method="button3"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button4" to="." method="button4"]
