[gd_scene load_steps=6 format=3 uid="uid://o387qlahldf"]

[ext_resource type="Script" uid="uid://cf2hav4yib2ko" path="res://Scripts/UI/stats_display.gd" id="1_6ir1p"]
[ext_resource type="PackedScene" uid="uid://m0vp852bqpjq" path="res://Scenes/UI/DragBar.tscn" id="2_36myq"]
[ext_resource type="PackedScene" uid="uid://dvnb4uadqlav6" path="res://Scenes/UI/toggle_ui_button.tscn" id="3_wdkpi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bv653"]

[sub_resource type="LabelSettings" id="LabelSettings_bv653"]
font_size = 32

[node name="Panel" type="Panel"]
custom_minimum_size = Vector2(300, 600)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -300.0
offset_right = 150.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_bv653")
script = ExtResource("1_6ir1p")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="damage" type="Label" parent="Panel"]
layout_mode = 0
offset_top = 152.0
offset_right = 84.0
offset_bottom = 207.0
text = "Default
"
label_settings = SubResource("LabelSettings_bv653")

[node name="range" type="Label" parent="Panel"]
layout_mode = 0
offset_top = 172.0
offset_right = 84.0
offset_bottom = 227.0
text = "Default
"
label_settings = SubResource("LabelSettings_bv653")

[node name="weight" type="Label" parent="Panel"]
layout_mode = 0
offset_top = 192.0
offset_right = 84.0
offset_bottom = 247.0
text = "Default
"
label_settings = SubResource("LabelSettings_bv653")

[node name="attackspeed" type="Label" parent="Panel"]
layout_mode = 0
offset_top = 212.0
offset_right = 84.0
offset_bottom = 267.0
text = "Default
"
label_settings = SubResource("LabelSettings_bv653")

[node name="stance" type="Label" parent="Panel"]
layout_mode = 0
offset_top = 232.0
offset_right = 84.0
offset_bottom = 287.0
text = "Default
"
label_settings = SubResource("LabelSettings_bv653")

[node name="velocity" type="Label" parent="Panel"]
layout_mode = 0
offset_top = 252.0
offset_right = 84.0
offset_bottom = 307.0
text = "Default
"
label_settings = SubResource("LabelSettings_bv653")

[node name="count" type="Label" parent="Panel"]
layout_mode = 0
offset_top = 272.0
offset_right = 84.0
offset_bottom = 327.0
text = "Default
"
label_settings = SubResource("LabelSettings_bv653")

[node name="piercing" type="Label" parent="Panel"]
layout_mode = 0
offset_top = 292.0
offset_right = 84.0
offset_bottom = 347.0
text = "Default
"
label_settings = SubResource("LabelSettings_bv653")

[node name="duration" type="Label" parent="Panel"]
layout_mode = 0
offset_top = 312.0
offset_right = 84.0
offset_bottom = 367.0
text = "Default
"
label_settings = SubResource("LabelSettings_bv653")

[node name="size" type="Label" parent="Panel"]
layout_mode = 0
offset_top = 332.0
offset_right = 84.0
offset_bottom = 387.0
text = "Default
"
label_settings = SubResource("LabelSettings_bv653")

[node name="buildup" type="Label" parent="Panel"]
layout_mode = 0
offset_top = 352.0
offset_right = 84.0
offset_bottom = 407.0
text = "Default
"
label_settings = SubResource("LabelSettings_bv653")

[node name="hp" type="Label" parent="Panel"]
layout_mode = 0
offset_top = 372.0
offset_right = 84.0
offset_bottom = 427.0
text = "Default
"
label_settings = SubResource("LabelSettings_bv653")

[node name="xp" type="Label" parent="Panel"]
layout_mode = 0
offset_top = 392.0
offset_right = 84.0
offset_bottom = 447.0
text = "Default
"
label_settings = SubResource("LabelSettings_bv653")

[node name="mogul" type="Label" parent="Panel"]
layout_mode = 0
offset_top = 412.0
offset_right = 84.0
offset_bottom = 467.0
text = "Default
"
label_settings = SubResource("LabelSettings_bv653")

[node name="movespeed" type="Label" parent="Panel"]
layout_mode = 0
offset_top = 432.0
offset_right = 84.0
offset_bottom = 487.0
text = "Default
"
label_settings = SubResource("LabelSettings_bv653")

[node name="DragBar" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("2_36myq")]
layout_mode = 1
anchors_preset = 10
anchor_top = 0.0
anchor_bottom = 0.0
offset_bottom = 54.0
grow_vertical = 1
parent = NodePath("..")

[node name="ToggleUIButton" parent="DragBar" node_paths=PackedStringArray("ui_to_hide") instance=ExtResource("3_wdkpi")]
layout_mode = 1
offset_left = -42.0
offset_top = -20.0
offset_right = -29.0
offset_bottom = -7.0
scale = Vector2(3, 3)
theme_override_font_sizes/font_size = 1
ui_to_hide = [NodePath("../../Panel/damage"), NodePath("../../Panel/range"), NodePath("../../Panel/weight"), NodePath("../../Panel/attackspeed"), NodePath("../../Panel/stance"), NodePath("../../Panel/velocity"), NodePath("../../Panel/count"), NodePath("../../Panel/piercing"), NodePath("../../Panel/duration"), NodePath("../../Panel/size"), NodePath("../../Panel/buildup"), NodePath("../../Panel/hp"), NodePath("../../Panel/xp"), NodePath("../../Panel/mogul"), NodePath("../../Panel/movespeed"), NodePath("../../Panel")]
